# learnopenglsfml

./: CMakeLists.txt  README.md
inc/: defines.hpp  graphics.hpp  main.hpp
src/: graphics.cpp  main.cpp
